test/compile_errors/err_collect_unknown_target.w
//! expect-check-fail: unsupported collect target

fn main:
    let xs: Vec[i32] = Vec.new()
    let _opt = xs.iter() |> collect[Option[i32]]()
